<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckedIN</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="signup"><u>New here? Sign Up</u></string>

    <string-array name="arr_left_nav_list">
        <item>Home</item>
        <item>Matches</item>
        <item>Liked Me</item>
        <item>I Liked</item>
        <item>Settings</item>
        <item>Check Out</item>
    </string-array>

    <string name="all_matches">All Matches</string>
    <string name="edit">Edit</string>
    <string name="type_msg">Type your message</string>
    <string name="start_conv">Start a conversation</string>
    <string name="keep_surf">Keep Surfing</string>
    <string name="or">or</string>
    <string name="no_one_around">There’s no one new around you!</string>
    <string name="invite_ur_frnds">Invite Your Friends</string>
    <string name="scan_again">Check In</string>
    <string name="gen_setting">General Settings</string>
    <string name="net_status">Network Status</string>
    <string name="connected">Connected</string>
    <string name="notification">Notifications</string>
    <string name="save_gal">Save to gallery</string>
    <string name="chat_setting">Chat Settings</string>
    <string name="about">About</string>
    <string name="tell_frnd">Tell a friend</string>
    <string name="restore_def">Restore defaults</string>
    <string name="acc_seting">Account Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_findmatch">Check In</string>

    <string name="google_maps_key">AIzaSyDIR0hP4O3HwRsh2Wz6RGxqZXuPwZiVgko</string>
    <integer name="google_play_services_version">8487000</integer>
    <string name="title_activity_launcher">Checked In</string>
</resources>
